src/test/deca/context/invalid/Obj/new-inexistant.deca
// Description:
//    Utilisation de new sur une classe non déclarée
//
// Résultat:
//type non défini
//
{
    A a = new A();
}